fixed boarder img on mobiles display version

--- a/css/styles.css
+++ b/css/styles.css
@@ -782,7 +782,7 @@ footer {
     .hero img {
       height: 37.5rem;
       width: 23rem;
-      border-radius: 100%;
+      border-radius: 24%;
     }
 
     .bio {
